Feat: added two endpoints item-collection/WDiscount [skip ci]
